[gd_scene load_steps=6 format=3 uid="uid://b7jd60wdxb4nb"]

[ext_resource type="Script" path="res://plasma_cannon.gd" id="1_5yuam"]
[ext_resource type="Texture2D" uid="uid://b8rah0wp3y2ss" path="res://Towers/Custom Sprites/Flamethrower_tower.png" id="2_gjhrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74pgj"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_rs35s"]
radius = 103.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnqg8"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999
corner_detail = 10

[node name="Flamethrower_Tower" type="StaticBody2D"]
script = ExtResource("1_5yuam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_74pgj")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="Tower" type="Area2D" parent="." groups=["Tower"]]

[node name="Range" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_rs35s")

[node name="bulletcontainer" type="Node" parent="."]

[node name="ShootTimer" type="Timer" parent="." groups=["Tower"]]
wait_time = 0.2
one_shot = true

[node name="Area" type="Panel" parent="."]
modulate = Color(0, 0, 0.313726, 1)
self_modulate = Color(0, 0, 0, 0.313726)
show_behind_parent = true
offset_left = -102.0
offset_top = -103.0
offset_right = 154.0
offset_bottom = 153.0
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_qnqg8")
metadata/_edit_use_anchors_ = true

[node name="FlamethrowerTower" type="Sprite2D" parent="."]
texture = ExtResource("2_gjhrk")

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
